adding jklol library to pom

--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,11 @@
           <artifactId>twitter4j-core</artifactId>
           <version>4.0.2</version>
         </dependency>
+        <dependency>
+          <groupId>com.jayantkrish</groupId>
+          <artifactId>jklol</artifactId>
+          <version>1.0</version>
+        </dependency>
   </dependencies>
   <repositories>      
   	<repository>
