--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>edu.cmu.ml.rtw</groupId>
+			<artifactId>micro-hdp</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
