--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.cmu.ml.rtw</groupId>
 	<artifactId>micro</artifactId>
+	<packaging>jar</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<skipTests>true</skipTests>
 	</properties>
 	<build>
+		<defaultGoal>integration-test</defaultGoal>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -16,6 +19,31 @@
 					<source />
 					<target />
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.github.maven-nar</groupId>
+				<artifactId>nar-maven-plugin</artifactId>
+				<extensions>true</extensions>
+				<executions>
+					<execution>
+						<id>nar-download</id>
+						<goals>
+							<goal>nar-download</goal>
+						</goals>
+					</execution>
+                                        <execution>
+                                                <id>nar-test-unpack</id>
+                                                <goals>
+                                                        <goal>nar-test-unpack</goal>
+                                                </goals>
+                                        </execution>
+					<execution>
+						<id>nar-integration-test</id>
+						<goals>
+							<goal>nar-integration-test</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -44,6 +72,7 @@
 			<groupId>edu.cmu.ml.rtw</groupId>
 			<artifactId>micro-hdp</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<type>nar</type>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -235,11 +264,11 @@
 			<artifactId>mapdb</artifactId>
 			<version>1.0.7</version>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>com.googlecode.matrix-toolkits-java</groupId>
 			<artifactId>mtj</artifactId>
 			<version>1.0.2</version>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
