nar-integration-test no longer runs. The vanilla Maven test system works just fine for our needs.

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,9 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<skipNar>true</skipNar>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
