--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@
 						</goals>
 					</execution>
                     <execution>
-                            <id>nar-test-unpack</id>
-                            <goals>
-                                    <goal>nar-test-unpack</goal>
-                            </goals>
+	                    <id>nar-test-unpack</id>
+	                    <goals>
+	                    	<goal>nar-test-unpack</goal>
+	                    </goals>
                     </execution>
 					<execution>
 						<id>nar-integration-test</id>
@@ -45,7 +45,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<skipNar>true</skipNar>
+					<skipNar>true</skipNar>    
 				</configuration>
 			</plugin>
 			<plugin>
@@ -59,6 +59,41 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											com.github.maven-nar
+										</groupId>
+										<artifactId>
+											nar-maven-plugin
+										</artifactId>
+										<versionRange>
+											[3.2.3,)
+										</versionRange>
+										<goals>
+											<goal>nar-test-unpack</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 	<dependencies>
 		<dependency>
