Moved semantic parsing stuff to its own repository

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 		</dependency>
 		<dependency>
 			<groupId>edu.cmu.ml.rtw</groupId>
+			<artifactId>micro-data</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.cmu.ml.rtw</groupId>
 			<artifactId>micro-verb</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
@@ -113,9 +118,9 @@
 		</dependency>
 		<dependency>
 			<groupId>edu.cmu.ml.rtw</groupId>
-			<artifactId>micro-data</artifactId>
+			<artifactId>micro-sem</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		</dependency>		
 		<dependency>
 			<groupId>edu.cmu.ml.rtw</groupId>
 			<artifactId>micro-hdp</artifactId>
