--- a/pom.xml
+++ b/pom.xml
@@ -108,12 +108,17 @@
 		</dependency>
 		<dependency>
 			<groupId>edu.cmu.ml.rtw</groupId>
+			<artifactId>micro-cat</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.cmu.ml.rtw</groupId>
 			<artifactId>micro-verb</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.cmu.ml.rtw</groupId>
-			<artifactId>micro-cat</artifactId>
+			<artifactId>micro-ppa</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
