--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
 		</dependency>
 		<dependency>
 			<groupId>edu.cmu.ml.rtw</groupId>
+			<artifactId>micro-regex</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.cmu.ml.rtw</groupId>
 			<artifactId>micro-sem</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>		
