--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,17 @@
 			<groupId>edu.cmu.ml.rtw</groupId>
 			<artifactId>micro-util</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
+<!-- Block this from hadoop since a conflicting version comes in through org.deeplearning4j via micro-util -->
+<exclusions>
+  <exclusion> 
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-log4j12</artifactId>
+  </exclusion>
+  <exclusion> 
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+  </exclusion>
+</exclusions> 
 		</dependency>
 		<dependency>
 			<groupId>edu.cmu.ml.rtw</groupId>
